# FTPServer

./: .gitignore  CMakeLists.txt
keys/: .env  users.db
src/: AuthHandler.cpp  AuthHandler.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientHandler.cpp  ClientHandler.hpp  EnvHandler.cpp  EnvHandler.hpp  FileUtil.cpp  FileUtil.hpp  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  Util.hpp  constants.hpp
storage/folder1/folder2/: file.txt
storage/folder2/: Faculties.ods
